commit du matin

--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,1 +1,6 @@
-<p>This is the partial for view 1.</p>
+<div ng-controller="View1Ctrl">
+    <menu-credit></menu-credit>
+    <form-credit></form-credit>
+    <br><hr>
+    <form-list></form-list>
+</div>
